fixed problem with gap on the left side

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
-.w-400-px {
-    width: 500px;
+.w-450-px {
+    width: 450px;
 }
